--- a/index.html
+++ b/index.html
@@ -1,28 +1,19 @@
-<!DOCTYPE html>
 <html>
-	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/aboutI">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
+<head>
+</head>
+<body bgcolor="orange">
+      <p><b><center><font color="white"><font size="500">ASHMI'S CHANNEL</center></font></font></p><br><hr size="50" color="blue">
+      <p style="border-width: 9px; border-style: double; border-color: blue">
+       this channel does videos about among us and roblox and is awsome and super fun.
+      </p>
+      <p><font color="red"><font size="500"><center>STUFF I DO</p></font></center><img src="among us icon.jpg" width="500" height="300" align="center"><img src="youtube.png" width="500" height="300"><img src="roblox icon.jpg" width="500" height="400"><marquee behaviour="scroll" direction="up" height="200" width="100"><font size="50"></font><img src="ocean.jpg"></marquee></marquee></img>
+      <p style="border-width: 9px; border-style: double; border-color: blue"><font size="50"></font>
+        in this channel I just record myslf playing games or reasearching. for example I play among us and enjoy and see if there are any scary or funny moments. and another example would be when I play roblox to be specific adopt me and I show some amazing hacks you can do there. and I just record this to help you like in adopt me or to share my experience like in among us.
+      </p>
+      <a href="error page.html"><img src="facebook icon.png" width="70" height="50"></a>
+      <a href="error page.html"><img src="twiter icon.png" width="70" height="50"></a>
+      <a href="error page.html"><img src="instagram icon.png" width="70" height="50"></a>
+     
+       <div>
+</body>
 </html>
